some ui changes to the list

--- a/app/src/main/res/layout/list_customer_single.xml
+++ b/app/src/main/res/layout/list_customer_single.xml
@@ -21,4 +21,12 @@
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listName" />
+
+    <TextView
+        android:id="@+id/listDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="@+id/listNumber"
+        app:layout_constraintTop_toBottomOf="@+id/listNumber" />
 </androidx.constraintlayout.widget.ConstraintLayout>
