--- a/app/src/main/res/layout/activity_salon_list.xml
+++ b/app/src/main/res/layout/activity_salon_list.xml
@@ -19,12 +19,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_salon"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/txt_salon_count"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
 
 
 </RelativeLayout>
