--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -24,7 +24,7 @@
             android:fontFamily="@font/bellerose"
             android:textAppearance="@android:style/TextAppearance.Large"/>
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edt_user"
             android:layout_margin="8dp"
             android:hint="Staff User"
@@ -32,7 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edt_password"
             android:layout_margin="8dp"
             android:hint="Staff Password"
